[package]
name = "vala_to_c_backend"
version = "0.1.0"
authors = ["jhalitaksoy <jhalitaksoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_cors = "0.5.1"
serde = { version = "1.0.124", features = ["derive"] }
rocket_contrib = "0.4.7"
